--- a/tela_rec/tela_rec.html
+++ b/tela_rec/tela_rec.html
@@ -19,7 +19,7 @@
     <main>
         <img id="img_fundo" src="/imgs/cjr_logo.png" alt="logo cjr">
         <div id="divRec">
-            <form id="divInfo"
+            <form id="divInfo">
                 <p class="texto1">Bem vindo de volta, fulano! escolha sua nova senha</p>
                 <p class="texto">Senha nova</p>
                 <input class="senha" type="password" placeholder="Senha">
@@ -27,7 +27,7 @@
                 <input class="senha" type="password" placeholder="Senha">
             </form>
             
-            <span id="link">Possui conta? <a href="">Acesse aqui!</a></span>
+            <span id="link1">Possui conta? <a id="link2" href="">Acesse aqui!</a></span>
             
             <button id="botao">Cadastrar</button>
         </div>
