--- a/tela_rec/tela_rec.html
+++ b/tela_rec/tela_rec.html
@@ -18,9 +18,11 @@
     </header>
     <main>
         <img id="img_fundo" src="/imgs/cjr_logo.png" alt="logo cjr">
-        <div id="divRec">
-            <form id="divInfo"
+        <div id="divRec"> 
+            <div id="divText">
                 <p class="texto1">Bem vindo de volta, fulano! escolha sua nova senha</p>
+            </div>  
+            <form id="divInfo">
                 <p class="texto">Senha nova</p>
                 <input class="senha" type="password" placeholder="Senha">
                 <p class="texto">Digite novamente a senha</p>
