--- a/tela_rec/tela_rec.html
+++ b/tela_rec/tela_rec.html
@@ -29,7 +29,7 @@
                 <input class="senha" type="password" placeholder="Senha">
             </form>
             
-            <span id="link">Possui conta? <a href="">Acesse aqui!</a></span>
+            <span id="link">Possui conta? <a id="link2" href="">Acesse aqui!</a></span>
             
             <button id="botao">Cadastrar</button>
         </div>
