refactor: Nova organização das pastas

--- a/html/tela_rec.html
+++ b/html/tela_rec.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de recuperação de senha</title>
-    <link rel="stylesheet" href="rec_style.css">
+    <link rel="stylesheet" href="../css/rec_style.css">
 </head>
 <body>
     <header>
         <div class="cjrLogoHeader">
-            <a href="" > <img class="cjrLogoHeaderImg" src="/imgs/cjr_logo.png" alt="logo cjr"> </a>
+            <a href="" > <img class="cjrLogoHeaderImg" src="../imgs/cjr_logo.png" alt="logo cjr"> </a>
         </div>
         <div>
             <a href="" class="criarConta">Criar Conta</a>
@@ -17,7 +17,7 @@
         </div>
     </header>
     <main>
-        <img id="img_fundo" src="/imgs/cjr_logo.png" alt="logo cjr">
+        <img id="img_fundo" src="../imgs/cjr_logo.png" alt="logo cjr">
         <div id="divRec"> 
             <div id="divText">
                 <p class="texto1">Bem vindo de volta, fulano! escolha sua nova senha</p>
