--- a/html/tela_login.html
+++ b/html/tela_login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login_style.css">
+    <link rel="stylesheet" href="../css/login_style.css">
 </head>
 <body>
     <header>
         <div class="cjrLogoHeader">
-            <a href="" > <img class="cjrLogoHeaderImg" src="/imgs/cjr_logo.png" alt="logo cjr"> </a>
+            <a href="" > <img class="cjrLogoHeaderImg" src="../imgs/cjr_logo.png" alt="logo cjr"> </a>
         </div>
         <div>
             <a href="" class="criarConta">Criar Conta</a>
