feat: Parte das informações do usuário

--- a/html/perfil_usuario.html
+++ b/html/perfil_usuario.html
@@ -10,9 +10,42 @@
     <header></header>
     <script src="../scripts/renderHeader.js"></script>
     <main>
-      <div class="perfil">
-        <div class="plano_de_fundo"></div>
+      <div class="feed">
+        <div class="Post_background"></div>
+        <div class="profile_content">
+          <div class="user_info">
+            <div class="user_info_content">
+              <div class="user_main_photo">
+                <img
+                  class="profile_picture"
+                  src="../imgs/user_photo.png"
+                  alt="Main_img"
+                />
+              </div>
+              <span class="user_name main_user_name"></span>
+              <div class="info">
+                <img
+                  class="icon"
+                  src="../imgs/mdi_office-building.png"
+                  alt="office_building"
+                />
+                <span class="text_icon">Assessoria</span>
+              </div>
+              <div class="info">
+                <img
+                  class="icon"
+                  src="../imgs/eva_email-outline.png"
+                  alt="email"
+                />
+                <span class="text_icon">Joazin.gamer.23@cjr.org.br</span>
+              </div>
+            </div>
+          </div>
+          <div class="Line_1"></div>
+          <div class="publicacoes"></div>
+        </div>
       </div>
     </main>
   </body>
+  <script src="../scripts/perfil_usuario_script.js"></script>
 </html>
