fix: Ajustes na fonte

--- a/html/tela_cadastro.html
+++ b/html/tela_cadastro.html
@@ -29,7 +29,7 @@
           <input class="campo" type="text" placeholder="Nome" />
           <div id="genero" class="campo">
             <span id="genero_placeholder">Gênero</span>
-            <a href=""><img id="select" src="../imgs/select.png" alt="" /></a>
+            <img id="select" src="../imgs/select.png" alt="" />
           </div>
           <input class="campo" type="text" placeholder="Cargo" />
           <input class="campo" type="email" placeholder="Email" />
