Finalização do perfil usuário

--- a/html/tela_cadastro.html
+++ b/html/tela_cadastro.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="../scripts/initialData.js"></script>
+    <script src="../scripts/renderHeader.js"></script>
     <link rel="stylesheet" href="../css/cadastro_style.css" />
     <title>Tela de cadastro</title>
   </head>
   <body>
     <header></header>
-    <script src="../scripts/renderHeader.js"></script>
+    <script>
+      renderHeader();
+    </script>
     <main>
       <img id="img_fundo" src="../imgs/cjr_logo.png" alt="CJR_logo" />
       <div id="cadastro">
