Generalização do header e criação do style.css

--- a/html/tela_cadastro.html
+++ b/html/tela_cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../scripts/initialData.js"></script>
+    <script src="../scripts/insertFunctions.js"></script>
     <script src="../scripts/renderHeader.js"></script>
     <link rel="stylesheet" href="../css/cadastro_style.css" />
     <title>Tela de cadastro</title>
@@ -46,4 +47,7 @@
       </div>
     </main>
   </body>
+  <script>
+    insert_name(USER_NAME, ".user_name");
+  </script>
 </html>
