--- a/html/tela_post.html
+++ b/html/tela_post.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post</title>
     <script src="../scripts/renderHeader.js"></script>
+    <script src="../scripts/insertFunctions.js"></script>
     <script src="../scripts/initialData.js"></script>
     <link rel="stylesheet" href="../css/post_aberto.css" />
   </head>
@@ -18,4 +19,7 @@
       <script src="../scripts/renderPost.js"></script>
     </main>
   </body>
+  <script>
+    insert_name(USER_NAME, ".user_name");
+  </script>
 </html>
