fix: Links redirecionam para as páginas html

--- a/html/tela_cadastro.html
+++ b/html/tela_cadastro.html
@@ -40,7 +40,10 @@
           <input class="campo" type="email" placeholder="Email" />
           <input class="campo" type="password" placeholder="Senha" />
 
-          <span id="link">Possui conta? <a href="">Acesse aqui!</a></span>
+          <span id="link"
+            >Possui conta?
+            <a href="../html/tela_rec.html">Acesse aqui!</a></span
+          >
 
           <button id="botao">Cadastrar</button>
         </form>
