--- a/html/tela_login.html
+++ b/html/tela_login.html
@@ -60,7 +60,9 @@
           </div>
           <input type="password" placeholder="Senha" />
         </div>
-        <a href="" class="esqueceuSenha">Esqueceu a senha?</a>
+        <a href="../html/tela_rec.html" class="esqueceuSenha"
+          >Esqueceu a senha?</a
+        >
         <button class="loginEntrar">Entrar</button>
       </div>
     </main>
