--- a/html/tela_rec.html
+++ b/html/tela_rec.html
@@ -30,7 +30,8 @@
         </form>
 
         <span id="link"
-          >Possui conta? <a id="link2" href="">Acesse aqui!</a></span
+          >Possui conta?
+          <a id="link2" href="../html/tela_login.html">Acesse aqui!</a></span
         >
 
         <button id="botao">Cadastrar</button>
