feat: Criação da tela de feed

--- a/html/tela_post.html
+++ b/html/tela_post.html
@@ -16,7 +16,7 @@
     </script>
     <main>
       <section class="sectionFeed"></section>
-      <script src="../scripts/renderPost.js"></script>
+      <script src="../scripts/renderPostAberto.js"></script>
     </main>
   </body>
   <script>
