add autenticação backend

--- a/html/perfil_usuario.html
+++ b/html/perfil_usuario.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/perfil_usuario_style.css" />
-    <link rel="stylesheet" href="../css/posts_style.css" />
     <script src="../scripts/initialData.js"></script>
     <script src="../scripts/insertFunctions.js"></script>
     <script src="../scripts/renderHeader.js"></script>
     <script src="../scripts/renderEditButton.js"></script>
-    <script src="../scripts/renderPosts.js"></script>
+    <script src="../scripts/perfil_usuario_script.js"></script>
     <title>Perfil do Usuário</title>
   </head>
   <body>
     <header></header>
     <script>
-      renderHeader();
+      console.log(localStorage.getItem("login"));
+      if(!localStorage.getItem("login"))
+        renderHeader();
+      else
+        loggedHeader();
     </script>
     <main>
       <div class="feed">
