Finalização da autenticação e adição da tela de publicação

--- a/html/tela_login.html
+++ b/html/tela_login.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
+    <script>
+      localStorage.setItem("login", "false");
+      localStorage.setItem("token", "");
+    </script>
     <script src="../scripts/initialData.js"></script>
     <script src="../scripts/insertFunctions.js"></script>
     <script src="../scripts/renderHeader.js"></script>
     <script src="../scripts/loginButton.js"></script>
-    <script>localStorage.setItem("login", false)</script>
+    <script>
+      localStorage.setItem("login", false);
+    </script>
     <link rel="stylesheet" href="../css/login_style.css" />
   </head>
   <body>
     <header></header>
     <script>
-      console.log(localStorage.getItem("login"))
+      console.log(localStorage.getItem("login"));
       renderHeader();
     </script>
     <main>
@@ -44,7 +50,7 @@
               />
             </svg>
           </div>
-          <input type="email" placeholder="Login" id="emailInput"/>
+          <input type="email" placeholder="Login" id="emailInput" />
         </div>
         <div class="divSenhaCampo">
           <div class="divImgCampos">
@@ -60,9 +66,11 @@
               />
             </svg>
           </div>
-          <input type="password" placeholder="Senha" id="senhaInput"/>
+          <input type="password" placeholder="Senha" id="senhaInput" />
         </div>
-        <a href="../html/tela_rec.html" class="esqueceuSenha">Esqueceu a senha?</a>
+        <a href="../html/tela_rec.html" class="esqueceuSenha"
+          >Esqueceu a senha?</a
+        >
         <button class="loginEntrar" onclick="loginButton()">Entrar</button>
       </div>
     </main>
