--- a/html/tela_cadastro.html
+++ b/html/tela_cadastro.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      localStorage.setItem("login", "false");
+      localStorage.setItem("token", "");
+    </script>
     <script src="../scripts/initialData.js"></script>
     <script src="../scripts/tela_cadastro_script.js"></script>
     <script src="../scripts/insertFunctions.js"></script>
@@ -18,7 +22,7 @@
     </script>
     <main>
       <img id="img_fundo" src="../imgs/cjr_logo.png" alt="CJR_logo" />
-      <form id="cadastro">
+      <div id="cadastro">
         <div id="inserir_foto">
           <img
             id="img_user_no_photo"
@@ -63,7 +67,7 @@
 
           <button id="botao" onclick="signupButton()">Cadastrar</button>
         </div>
-      </form>
+      </div>
     </main>
   </body>
   <script>
