--- a/html/tela_feed.html
+++ b/html/tela_feed.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"
+    />
     <link rel="stylesheet" href="../css/posts_style.css" />
     <link rel="stylesheet" href="../css/tela_feed_style.css" />
     <script src="../scripts/initialData.js"></script>
@@ -29,6 +33,17 @@
         </div>
       </div>
     </main>
+    <div id="modaloverlay">
+      <div id="divPost">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <span id="botoes">
+          <button id="cancel">Cancelar</button>
+          <button id="publ">Publicar</button>
+        </span>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+    <script src="../scripts/mostrarpost2.js"></script>
   </body>
   <script>
     let comments = true;
