Finalização dos comentários

--- a/html/tela_post.html
+++ b/html/tela_post.html
@@ -35,7 +35,5 @@
       <script src="../scripts/mostrarpost.js"></script>
     </main>
   </body>
-  <script>
-    insert_name(USER_NAME, ".user_name");
-  </script>
+  <script src="../scripts/tela_post_script.js"></script>
 </html>
