--- a/html/tela_feed.html
+++ b/html/tela_feed.html
@@ -13,6 +13,7 @@
     <script src="../scripts/insertFunctions.js"></script>
     <script src="../scripts/renderHeader.js"></script>
     <script src="../scripts/renderPosts.js"></script>
+    <script src="../scripts/publishButton.js"></script>
     <title>Feed</title>
     <script>
       if (localStorage.getItem("login") == "true")
@@ -34,7 +35,7 @@
     </main>
     <div id="modaloverlay">
       <div id="divPost">
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <textarea name="" id="myTextarea" cols="30" rows="10"></textarea>
         <span id="botoes">
           <button id="cancel">Cancelar</button>
           <button id="publ">Publicar</button>
