--- a/html/tela_post.html
+++ b/html/tela_post.html
@@ -7,6 +7,7 @@
     <script src="../scripts/renderHeader.js"></script>
     <script src="../scripts/insertFunctions.js"></script>
     <script src="../scripts/initialData.js"></script>
+    <script src="../scripts/publishButton.js"></script>
     <link rel="stylesheet" href="../css/post_aberto.css" />
     <link
       rel="stylesheet"
@@ -23,7 +24,7 @@
       <section class="sectionFeed"></section>
       <div id="modaloverlay">
         <div id="divPost">
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <textarea name="" id="myTextarea" cols="30" rows="10"></textarea>
           <span id="botoes">
             <button id="cancel">Cancelar</button>
             <button id="publ">Publicar</button>
